// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card Component matches snapshot with children only 1`] = `
<DocumentFragment>
  <div
    class=""
  >
    <div>
      Child Component
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card Component matches snapshot with custom styles 1`] = `
<DocumentFragment>
  <div
    class="rounded-xl border border-red-500 bg-red-700 p-8 text-white"
  >
    <div>
      Custom Styled Child Component
    </div>
  </div>
</DocumentFragment>
`;

exports[`Card Component matches snapshot with default styles 1`] = `
<DocumentFragment>
  <div
    class="rounded-lg border border-gray-300 bg-gray-100 p-4"
  >
    <div>
      Default Child Component
    </div>
  </div>
</DocumentFragment>
`;
